[package]
name = "egui-directx11"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
egui = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_UI_WindowsAndMessaging",
] }
webbrowser = { workspace = true }
arboard = { workspace = true }

[dev-dependencies]
winit = "0.26"
